Update dependencies and add BookDetails page

--- a/Template1/package.json
+++ b/Template1/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3000",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint --ext ts,tsx src/",
@@ -14,8 +14,11 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.0.14",
+    "@tanstack/react-query": "^5.8.3",
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
     "react-tabs": "^6.0.2"
   },
