--- a/Template1/package.json
+++ b/Template1/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-file-drop": "^3.1.6",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
     "react-tabs": "^6.0.2"
