--- a/Template1/package.json
+++ b/Template1/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.0.14",
+    "@tanstack/react-query": "^5.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
