--- a/Template1/package.json
+++ b/Template1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "libmanagement",
+  "name": "library-management",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,42 +10,88 @@
     "lint": "eslint --ext ts,tsx src/",
     "lint:fix": "eslint --fix --ext ts,tsx src/",
     "prettier": "prettier --check \"src/**/(*.tsx|*.ts|*.css|*.scss)\"",
-    "prettier:fix": "prettier --write \"src/**/(*.tsx|*.ts|*.css|*.scss)\""
+    "prettier:fix": "prettier --write \"src/**/(*.tsx|*.ts|*.css|*.scss)\"",
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.24.8",
     "@hookform/resolvers": "^3.3.2",
-    "@phosphor-icons/react": "^2.0.14",
-    "@tanstack/react-query": "^5.8.4",
-    "axios": "^1.6.2",
+    "@phosphor-icons/react": "^2.0.15",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-query-devtools": "^4.36.1",
+    "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.5.1",
+    "classnames": "^2.3.2",
+    "dompurify": "^3.0.4",
+    "framer-motion": "^10.16.5",
+    "html-to-text": "^9.0.5",
+    "i18next": "^23.2.8",
+    "immer": "^10.0.2",
+    "lodash": "^4.17.21",
+    "million": "^2.4.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.48.2",
+    "react-helmet-async": "^1.3.0",
+    "react-hook-form": "^7.47.0",
+    "react-i18next": "^13.0.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.16.0",
     "react-tabs": "^6.0.2",
+    "react-toastify": "^9.1.3",
+    "socket.io-client": "^4.7.2",
     "yup": "^1.3.2"
   },
   "devDependencies": {
-    "@types/node": "^20.6.5",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.7.2",
-    "@typescript-eslint/parser": "^6.7.2",
-    "@vitejs/plugin-react": "^4.0.4",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.50.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.28.1",
+    "@babel/core": "^7.22.8",
+    "@storybook/addon-actions": "^7.0.26",
+    "@storybook/addon-essentials": "^7.0.26",
+    "@storybook/addon-interactions": "^7.0.26",
+    "@storybook/addon-links": "^7.0.26",
+    "@storybook/blocks": "^7.0.26",
+    "@storybook/builder-vite": "^7.0.26",
+    "@storybook/react": "^7.0.26",
+    "@storybook/react-vite": "^7.0.26",
+    "@storybook/testing-library": "^0.2.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/dompurify": "^3.0.2",
+    "@types/html-to-text": "^9.0.1",
+    "@types/jsdom": "^21.1.1",
+    "@types/lodash": "^4.14.195",
+    "@types/node": "^20.4.1",
+    "@types/react": "^18.2.25",
+    "@types/react-dom": "^18.2.6",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
+    "@vitejs/plugin-react": "^4.0.2",
+    "@vitest/coverage-c8": "^0.33.0",
+    "autoprefixer": "^10.4.14",
+    "babel-loader": "^9.1.3",
+    "eslint": "^8.54.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "eslint-plugin-storybook": "^0.6.14",
-    "postcss": "^8.4.30",
-    "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.4",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "eslint-plugin-storybook": "^0.6.12",
+    "jsdom": "^22.1.0",
+    "msw": "^1.2.2",
+    "postcss": "^8.4.25",
+    "prettier": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.5",
+    "prop-types": "^15.8.1",
+    "rollup-plugin-visualizer": "^5.9.2",
+    "storybook": "^7.0.26",
+    "storybook-addon-react-router-v6": "^1.0.2",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.1.6",
+    "vite": "^4.4.2",
+    "vitest": "^0.33.0"
   }
 }
