--- a/Template1/package.json
+++ b/Template1/package.json
@@ -41,6 +41,7 @@
     "react-i18next": "^13.0.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.16.0",
+    "react-select": "^5.8.0",
     "react-tabs": "^6.0.2",
     "react-toastify": "^9.1.3",
     "socket.io-client": "^4.7.2",
