--- a/Template1/package.json
+++ b/Template1/package.json
@@ -33,6 +33,7 @@
     "immer": "^10.0.2",
     "lodash": "^4.17.21",
     "million": "^2.4.9",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-file-drop": "^3.1.6",
