--- a/Template1/package.json
+++ b/Template1/package.json
@@ -75,6 +75,7 @@
     "@vitest/coverage-c8": "^0.33.0",
     "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
+    "daisyui": "^4.4.24",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
