--- a/Template1/package.json
+++ b/Template1/package.json
@@ -21,8 +21,8 @@
     "@hookform/resolvers": "^3.3.2",
     "@phosphor-icons/react": "^2.0.15",
     "@tailwindcss/line-clamp": "^0.4.4",
-    "@tanstack/react-query": "^5.15.5",
-    "@tanstack/react-query-devtools": "^5.15.5",
+    "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-query-devtools": "^4.36.1",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.5.1",
     "classnames": "^2.3.2",
@@ -40,6 +40,7 @@
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.48.2",
     "react-i18next": "^13.0.1",
+    "react-icons": "^4.12.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.16.0",
     "react-select": "^5.8.0",
