--- a/Template1/package.json
+++ b/Template1/package.json
@@ -44,6 +44,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.16.0",
     "react-select": "^5.8.0",
+    "react-simple-star-rating": "^5.1.7",
     "react-tabs": "^6.0.2",
     "react-toastify": "^9.1.3",
     "socket.io-client": "^4.7.2",
